--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 					<h1>Vizia Tech</h1>
 					<h3>A brief technical tour</h3>
 					<p>
-						<small><a href="http://dan.nea.me">Julius Dietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a></small>
+						<small>Julius Dietz (<a href="http://twitter.com/juliusdietz">@juliusdietz</a>) &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
+					</p>
+					<p>
+						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
 					</p>
 				</section>
 
@@ -251,7 +254,10 @@
 					<h1>Thanks!</h1>
 					<h3></h3>
 					<p>
-						<small><a href="http://dan.nea.me">Julius Dietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a></small>
+						<small><a href="http://dan.nea.me">Julius Dietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
+					</p>
+					<p>
+						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
 					</p>
 					<p>
 						<small>Language and browser icons from Wikipedia</small>
