Julius' slides (minus videos) and roboto font face

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 
+		<link rel="stylesheet" href="css/roboto.css">
 		<link rel="stylesheet" href="css/viziatalk.css">
 	</head>
 
@@ -53,6 +54,58 @@
 					<p>
 						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
 					</p>
+				</section>
+
+				<section>
+					<img src="slides/slide_2_insidebrandwatch.png">
+				</section>
+
+				<section>
+					<img src="slides/slide_3_brandwatch_analytics.png">
+				</section>
+
+				<section>
+					<img src="slides/slide_4_standard_vizia_visual.png">
+				</section>
+
+				<section>
+					<img src="slides/slide5_vizia_scribbles.png">
+				</section>
+
+				<section>
+					<img src="slides/slide6_newusecases.png">
+				</section>
+
+				<section>
+					<img src="slides/slide7_knowledgeworker.png">
+				</section>
+
+				<section>
+					<img src="slides/slide8_guysinfrontofvizia.png">
+				</section>
+
+				<section>
+					<img src="slides/slide12_flexibility.png">
+				</section>
+
+				<section>
+					<img src="slides/slide12_just_a_dummy_for_a_video_of_6screens_in_action.png">
+				</section>
+
+				<section>
+					<img src="slides/slide13_physical_context.png">
+				</section>
+
+				<section>
+					<img src="slides/slide15_ambientlight.png">
+				</section>
+
+				<section>
+					<img src="slides/slide16_monster_setup.png">
+				</section>
+
+				<section>
+					<img src="slides/slide17_Vizia_Flow_Diagram_v2.png">
 				</section>
 
 				<section>
