Updated Julius's slides and cut mine down a bit - moved videos to Julius's half

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Vizia Tech</h1>
-					<h3>A brief technical tour</h3>
+					<h1>Brandwatch Vizia/</h1>
+					<h3>Designing for the unpredictable</h3>
 					<p>
 						<small>Julius Dietz (<a href="http://twitter.com/juliusdietz">@juliusdietz</a>) &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
 					</p>
@@ -57,50 +57,98 @@
 				</section>
 
 				<section>
+					<h2>#insidebrandwatch</h2>
 					<img src="slides/slide_2_insidebrandwatch.png">
+					<p>
+						Btw: We’re hiring Javascript and Java devs:
+					</p>
+					<ul>
+						<li class="iconlist" style="height:auto">Stuttgart</li>
+						<li class="iconlist" style="height:auto">Berlin</li>
+						<li class="iconlist" style="height:auto">Brighton</li>
+						<li class="iconlist" style="height:auto">San Fran</li>
+					</ul>
 				</section>
 
 				<section>
+					<h2>Brandwatch Analytics/</h2>
+					<p>
+						Web based social media monitoring platform
+					</p>
 					<img src="slides/slide_3_brandwatch_analytics.png">
 				</section>
 
 				<section>
+					<h2>Brandwatch Vizia/</h2>
+					<p>
+						A realtime data visualisation platform<br>that brings social data to everyone in your business
+					</p>
 					<img src="slides/slide_4_standard_vizia_visual.png">
 				</section>
 
 				<section>
+					<h2>Brandwatch Vizia/</h2>
+					<p>
+						9 challenging months
+					</p>
 					<img src="slides/slide5_vizia_scribbles.png">
 				</section>
 
 				<section>
+					<h2>Brandwatch Vizia/</h2>
+					<p>
+						A realtime data viz platform
+					</p>
 					<img src="slides/slide6_newusecases.png">
 				</section>
 
 				<section>
+					<h2>From single...</h2>
 					<img src="slides/slide7_knowledgeworker.png">
 				</section>
 
 				<section>
+					<h2>...to many</h2>
 					<img src="slides/slide8_guysinfrontofvizia.png">
 				</section>
 
 				<section>
+					<h2>Variance of data</h2>
+					<img src="slides/slide9_varianceindata.png">
+				</section>
+
+				<section data-background-color="#000">
+					<h2>Variance of data/ movement</h2>
+					<video data-autoplay src="video/globe.mov"></video>
+				</section>
+
+				<section data-background-color="#000">
+					<h2>Variance of data/ macro and micro</h2>
+					<video data-autoplay src="video/tiles.mov"></video>
+				</section>
+
+				<section data-background-color="#000">
+					<h2>Variance of data/ flexibility</h2>
+					<video data-autoplay src="video/multiple-screens.mov"></video>
+				</section>
+
+				<section>
+					<h2>Variance of data/ flexibility</h2>
 					<img src="slides/slide12_flexibility.png">
 				</section>
 
 				<section>
-					<img src="slides/slide12_just_a_dummy_for_a_video_of_6screens_in_action.png">
-				</section>
-
-				<section>
+					<h2>Design Challenges</h2>
 					<img src="slides/slide13_physical_context.png">
 				</section>
 
 				<section>
+					<h2>Physical context/ Lighting</h2>
 					<img src="slides/slide15_ambientlight.png">
 				</section>
 
 				<section>
+					<h2>Physical context/ Distance</h2>
 					<img src="slides/slide16_monster_setup.png">
 				</section>
 
@@ -120,42 +168,15 @@
 							<li class="fragment iconlist"><img src="img/css3.png"></li>
 							<li class="fragment iconlist"><img src="img/svg.png"></li>
 						</ul>
-					</section>
-					<section>
-						<h2>Browser support</h2>
-						<p class="fragment">
-							Cutting edge tech
-						</p>
-						<p class="fragment">
-							But not bleeding edge
-						</p>
-						<ul>
-							<li class="fragment iconlist"><img src="img/chrome.png"></li>
-							<li class="fragment iconlist"><img src="img/firefox.png"></li>
-							<li class="fragment iconlist"><img src="img/safari.png"></li>
-							<li class="fragment iconlist"><img src="img/ie11.png"></li>
-						</ul>
 						<p class="fragment">
 							"A browser"
 						</p>
 					</section>
 					<section>
-						<h2>Device support</h2>
+						<h2>Device support &amp; Resolution</h2>
 						<p class="fragment">
 							"4 inch to 4K"
 						</p>
-						<ul>
-							<li class="fragment iconlist">iPhone icon</li>
-							<li class="fragment iconlist">Tablet icon</li>
-							<li class="fragment iconlist">Desktop icon</li>
-							<li class="fragment iconlist">4K icon</li>
-						</ul>
-						<p class="fragment">
-							Most people have a wall display with roughly 6 screens
-						</p>
-					</section>
-					<section>
-						<h2>Resolution</h2>
 						<p class="fragment">
 							Multiple screen sizes
 						</p>
@@ -175,10 +196,6 @@
 					<section data-background-color="#000">
 						<h2>Fluid layout</h2>
 						<video data-autoplay src="video/resizing.mov"></video>
-					</section>
-					<section data-background-color="#000">
-						<h2>Flexible window management</h2>
-						<video data-autoplay src="video/multiple-screens.mov"></video>
 					</section>
 				</section>
 
@@ -222,7 +239,7 @@
 						</ol>
 					</section>
 					<section>
-						<h2>Front end</h2>
+						<h2>Front end challenges</h2>
 						<p class="fragment">
 							Runs on walls and in kiosks
 						</p>
@@ -230,31 +247,13 @@
 							Needs to stay running for up to 1 year
 						</p>
 						<p class="fragment">
+							<i>Absolutely no memory leaks</i>
+						</p>
+						<p class="fragment">
 							We spent a lot of time profiling memory!
 						</p>
 						<p class="fragment">
 							Settled on Backbone and vanilla JS, very light
-						</p>
-					</section>
-					<section>
-						<h2>Back end</h2>
-						<p class="fragment">
-							Acts as a proxy
-						</p>
-						<p class="fragment">
-							Very little transformation of data
-						</p>
-						<p class="fragment">
-							Some Vizia-specific endpoints
-						</p>
-						<p class="fragment">
-							Node.js application
-						</p>
-						<p class="fragment">
-							Stateless, so it can be clustered
-						</p>
-						<p class="fragment">
-							Redis for session management and caching
 						</p>
 					</section>
 				</section>
@@ -298,7 +297,7 @@
 							Speedy development
 						</p>
 						<p class="fragment">
-							Come grab us afterwards!
+							Questions!
 						</p>
 					</section>
 				</section>
@@ -311,9 +310,6 @@
 					</p>
 					<p>
 						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
-					</p>
-					<p>
-						<small>Language and browser icons from Wikipedia</small>
 					</p>
 					<p>
 						<img src="img/pinkie.gif" style="border:0">
