--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 					<p>
 						Web based social media monitoring platform
 					</p>
-					<img src="slides/slide_3_brandwatch_analytics.png">
+					<!-- Any trick we can get the transparent part of the png to be transparent? -->
+					<img src="slides/analytics-on-transparent-background.png">
 				</section>
 
 				<section>
@@ -83,28 +84,24 @@
 					<p>
 						A realtime data visualisation platform<br>that brings social data to everyone in your business
 					</p>
-					<img src="slides/slide_4_standard_vizia_visual.png">
+					<!-- Any trick we can get the transparent part of the png to be transparent? -->					
+					<img src="slides/slide4.png">
 				</section>
 
 				<section>
-					<h2>Brandwatch Vizia/</h2>
-					<p>
-						9 challenging months
-					</p>
+					<h2>9 challenging months</h2>
 					<img src="slides/slide5_vizia_scribbles.png">
 				</section>
 
 				<section>
-					<h2>Brandwatch Vizia/</h2>
-					<p>
-						A realtime data viz platform
-					</p>
+					<h2>Design Challenge</h2>
+
 					<img src="slides/slide6_newusecases.png">
 				</section>
 
 				<section>
 					<h2>From single...</h2>
-					<img src="slides/slide7_knowledgeworker.png">
+					<img src="slides/knowledgeworker.jpg">
 				</section>
 
 				<section>
@@ -113,7 +110,7 @@
 				</section>
 
 				<section>
-					<h2>Variance of data</h2>
+					<h2>Design Challenge</h2>
 					<img src="slides/slide9_varianceindata.png">
 				</section>
 
@@ -123,13 +120,8 @@
 				</section>
 
 				<section data-background-color="#000">
-					<h2>Variance of data/ macro and micro</h2>
-					<video data-autoplay src="video/tiles.mov"></video>
-				</section>
-
-				<section data-background-color="#000">
-					<h2>Variance of data/ flexibility</h2>
-					<video data-autoplay src="video/multiple-screens.mov"></video>
+					<h2>Variance of data/ macro micro</h2>
+					<video data-autoplay src="video/tile_scene_julius.mov"></video>
 				</section>
 
 				<section>
@@ -138,13 +130,13 @@
 				</section>
 
 				<section>
-					<h2>Design Challenges</h2>
+					<h2>Design Challenge</h2>
 					<img src="slides/slide13_physical_context.png">
 				</section>
 
 				<section>
 					<h2>Physical context/ Lighting</h2>
-					<img src="slides/slide15_ambientlight.png">
+					<img src="slides/lighting.jpg">
 				</section>
 
 				<section>
@@ -306,7 +298,7 @@
 					<h1>Thanks!</h1>
 					<h3></h3>
 					<p>
-						<small><a href="http://dan.nea.me">Julius Dietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
+						<small><a href="http://twitter.com/juliusdietz">@juliusdietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
 					</p>
 					<p>
 						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
