Updating links for names...

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<h1>Brandwatch Vizia/</h1>
 					<h3>Designing for the unpredictable</h3>
 					<p>
-						<small>Julius Dietz (<a href="http://twitter.com/juliusdietz">@juliusdietz</a>) &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
+						<small><a href="http://twitter.com/juliusdietz">Julius Dietz</a> (<a href="http://twitter.com/juliusdietz">@juliusdietz</a>) &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
 					</p>
 					<p>
 						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
@@ -298,7 +298,7 @@
 					<h1>Thanks!</h1>
 					<h3></h3>
 					<p>
-						<small><a href="http://twitter.com/juliusdietz">@juliusdietz</a> &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
+						<small><a href="http://twitter.com/juliusdietz">Julius Dietz</a> (<a href="http://twitter.com/juliusdietz">@juliusdietz</a>) &amp; <a href="http://dan.nea.me">Dan Neame</a> (<a href="http://twitter.com/cham">@cham</a>)</small>
 					</p>
 					<p>
 						<small><a href="http://github.com/cham/vizia-pushconf">github.com/cham/vizia-pushconf</a></small>
