Fixed transparency on PNGs and added the new globe sneak preview

--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
 						<h2>Barometer</h2>
 						<video data-autoplay src="video/barometer.mov"></video>
 					</section>
+					<section data-background-color="#000">
+						<h2>Q4 2014</h2>
+						<img src="slides/newglobe.png">
+					</section>
 				</section>
 
 				<section>
