--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
 				<section>
 					<h2>#insidebrandwatch</h2>
-					<img src="slides/slide_2_insidebrandwatch.png">
+					<img src="slides/culture.png">
+					<p>
+						<small>(We're hiring for JS and Java devs in Stuttgart, Berlin, Brighton :) )</small>
+					</p>
 				</section>
 
 				<section>
@@ -66,7 +69,6 @@
 					<p>
 						Web based social media monitoring platform
 					</p>
-					<!-- Any trick we can get the transparent part of the png to be transparent? -->
 					<img src="slides/analytics-on-transparent-background.png">
 				</section>
 
@@ -75,19 +77,18 @@
 					<p>
 						A realtime data visualisation platform<br>that brings social data to everyone in your business
 					</p>
-					<!-- Any trick we can get the transparent part of the png to be transparent? -->					
 					<img src="slides/slide4.png">
 				</section>
 
 				<section>
 					<h2>9 challenging months</h2>
-					<img src="slides/slide5_vizia_scribbles.png">
+					<img src="slides/sketches.png">
 				</section>
 
 				<section>
 					<h2>Design Challenge</h2>
 
-					<img src="slides/slide6_newusecases.png">
+					<img src="slides/sketches_usecases.png">
 				</section>
 
 				<section>
@@ -102,7 +103,7 @@
 
 				<section>
 					<h2>Design Challenge</h2>
-					<img src="slides/slide9_varianceindata.png">
+					<img src="slides/sketches_variance.png">
 				</section>
 
 				<section data-background-color="#000">
@@ -117,7 +118,7 @@
 
 				<section>
 					<h2>Design Challenge</h2>
-					<img src="slides/slide13_physical_context.png">
+					<img src="slides/sketches_physical.png">
 				</section>
 
 				<section>
